syntax = "proto3";
package sgenetwork.sge.bet;

import "gogoproto/gogo.proto";
import "sge/bet/params.proto";
import "sge/bet/bet.proto";

option go_package = "github.com/sge-network/sge/x/bet/types";

// GenesisState defines the bet module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Bet bet_list = 2 [(gogoproto.nullable) = false];
}
